TEST/EXCEPT-tests/exception_test_009.errout.GOLD
/workspaces/Pnut-ts-dev/TEST/EXCEPT-tests/exception_test_009.spin2:6:error:Expected a constant, unary operator, or "("
