TEST/EXCEPT-tests/exception_test_009.spin2
CON

' testing not PTR[ab] exception: pre-increment
DAT

    rdlong 10, ++pb